[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piservod"
version = "0.1.2"
description = "Python bindings for piservod - software PWM daemon for controlling servos on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Chris L.", email = "stylesuxx@gmail.com"}
]
maintainers = [
    {name = "Chris L.", email = "stylesuxx@gmail.com"}
]
keywords = ["raspberry-pi", "servo", "pwm", "robotics", "gpio", "piservod"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/stylesuxx/piservod"
Repository = "https://github.com/stylesuxx/piservod-python"
Issues = "https://github.com/stylesuxx/piservod-python/issues"
Documentation = "https://github.com/stylesuxx/piservod-python#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["piservod*"]
namespaces = false

[tool.setuptools.package-data]
piservod = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=piservod",
    "--cov-report=term-missing",
    "--cov-report=html",
]